# AEGIS-OS

./: .env  .env.example  .gitignore  AI-SECURITY-FRAMEWORK.md  CHANGELOG.md  COMMERCIAL.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  aegis.toml  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
deploy/: prometheus.yml
docs/: index.html
skill/aegis-security-skill/: SKILL.md
skill/aegis-security-skill/assets/: report-template.md
skill/aegis-security-skill/references/: nist-mapping.md  owasp-mapping.md
skill/aegis-security-skill/scripts/: scan.py
src/: main.rs
src/a2a/: mod.rs
src/audit/: mod.rs
src/autonomous/: mod.rs
src/cli/: mod.rs
src/continuous_test/: mod.rs
src/credentials/: mod.rs
src/dashboard/: mod.rs
src/discovery/: mod.rs
src/extraction_detect/: mod.rs
src/gateway/: mod.rs
src/guardrails/: mod.rs
src/hallucination/: mod.rs
src/inference/: mod.rs
src/isolation/: mod.rs
src/kali/: mod.rs
src/learning/: mod.rs
src/mcp/: mod.rs
src/orchestrator/: mod.rs
src/privacy/: mod.rs
src/rag_security/: mod.rs
src/redteam/: mod.rs
src/reporter/: mod.rs
src/risk/: mod.rs
src/ros2/: mod.rs
src/sanitization/: mod.rs
src/server/: mod.rs
src/skill_vetting/: mod.rs
src/state/: mod.rs
src/telemetry/: mod.rs
src/tool_router/: mod.rs
src/watermark/: mod.rs
tests/: advanced_security.rs  security_integration.rs
